# small-ecs

./: .gitignore  Cargo.toml  README.md
benches/: hundred_entities.rs  iter_over_hundred_entities.rs
examples/: basic.rs  children.rs  nested_containers.rs
src/: lib.rs  prelude.rs
src/prelude/: component.rs  container.rs  entity.rs
