[package]
name = "smecs"
version = "0.1.4"
edition = "2021"
description = "Dependency free ECS"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['dylib']

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[dependencies]
