[package]
name = "smecs"
version = "0.1.4"
edition = "2021"
description = "Dependency free ECS"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static-dispatch = []
deafault-fatures = []

[lib]
crate-type = ['dylib', "rlib"]

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "hundred_entities"
harness = false

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "nested_containers"
path = "examples/nested_containers.rs"

[[example]]
name = "children"
path = "examples/children.rs"

