[package]
name = "smecs"
version = "0.1.5"
edition = "2021"
description = "Dependency free ECS"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['dylib', "rlib"]

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
overflow-checks = false
debug = false
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "hundred_entities"
harness = false

[[example]]
name = "basic"
path = "examples/basic.rs"

